--- a/TNM/packages.config
+++ b/TNM/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
+  <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
   <package id="HarfBuzzSharp" version="7.3.0.2" targetFramework="net48" />
   <package id="HarfBuzzSharp.NativeAssets.macOS" version="7.3.0.2" targetFramework="net48" />
   <package id="HarfBuzzSharp.NativeAssets.Win32" version="7.3.0.2" targetFramework="net48" />
