--- a/TNM/TNM.csproj
+++ b/TNM/TNM.csproj
@@ -116,6 +116,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Samples\SamplePage1.xaml.cs">
+      <DependentUpon>SamplePage1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Samples\SamplePage2.xaml.cs">
+      <DependentUpon>SamplePage2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Samples\SamplePage3.xaml.cs">
+      <DependentUpon>SamplePage3.xaml</DependentUpon>
+    </Compile>
     <Page Include="Auth\Authorization.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -132,6 +141,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Menu\MainMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Samples\SamplePage1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Samples\SamplePage2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Samples\SamplePage3.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
