added orm, auth and register functionality
need to fix twoway mode on project view by adding some new pages

--- a/TNM/App.config
+++ b/TNM/App.config
@@ -15,4 +15,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings><add name="TaskNoteManagementDBEntities" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BQP1AEJ;initial catalog=TaskNoteManagementDB;persist security info=True;user id=Diplom;password=12345;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
