Working Theme Changing function
Extra ui changes

--- a/DesktopApp/TNM/App.config
+++ b/DesktopApp/TNM/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<!-- Поддерживаются темы Light или Dark -->
 		<add key="ApplicationTheme" value="Dark" />
 	</appSettings>
 </configuration>
