--- a/DesktopApp/TNM/App.config
+++ b/DesktopApp/TNM/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<!-- Поддерживаются темы Light или Dark -->
-		<add key="ApplicationTheme" value="Dark" />
+		<add key="ApplicationTheme" value="HighContrast" />
 	</appSettings>
 </configuration>
