--- a/DesktopApp/TNM/TNM.csproj
+++ b/DesktopApp/TNM/TNM.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="ModernWpfUI" Version="0.9.6" />
     <PackageReference Include="Supabase" Version="1.1.1" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
     <PackageReference Include="WPF-UI" Version="3.0.5" />
   </ItemGroup>
 
